--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     android:installLocation="auto">
 
     <!-- If you are not using donation and premium request, you need to remove BILLING permission -->
-    <uses-permission android:name="com.android.vending.BILLING" />
+    <!-- <uses-permission android:name="com.android.vending.BILLING" /> -->
 
     <!-- If you are not using license checker, you need to remove CHECK_LICENSE permission -->
     <!-- <uses-permission android:name="com.android.vending.CHECK_LICENSE" /> -->
