--- a/.github/workflows/build_all.yml
+++ b/.github/workflows/build_all.yml
@@ -61,6 +61,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
+    - name: Wait if requests are updating
+      uses: lewagon/wait-on-check-action@v1.2.0
+      with:
+        ref: ${{ github.ref }}
+        check-name: 'Update'
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
+        wait-interval: 10
+
     - name: Checkout
       uses: actions/checkout@v3
       with:
@@ -77,7 +85,7 @@ jobs:
       run: |
         sudo apt-get update -y
         sudo apt-get install -y optipng
-        sudo pip install natsort
+        sudo pip install -r resources\utilities\requirements.txt
 
     - name: Restore configs from secrets
       run: |
@@ -148,17 +156,18 @@ jobs:
       run: |
         mkdir changelog && cd $_
 
+        path=..
         changelog_txt=whatsnew-en-US
-        changelog_xml=../app/src/main/res/values/changelog.xml
-        drawable_xml=../app/src/main/res/xml/drawable.xml
+        changelog_xml=$path/app/src/main/res/values/changelog.xml
+        drawable_xml=$path/app/src/main/res/xml/drawable.xml
 
         drawable_lines=$(grep '<item' $drawable_xml | sort)
         summary=$(echo "$drawable_lines" | wc -l)
         amount_all=$(echo "$drawable_lines" | uniq | wc -l)
         amount_new=$(( $summary - $amount_all ))
 
-        candybar_play=../app/src/play/java/website/leifs/delta/applications/CandyBar.java
-        candybar_foss=../app/src/foss/java/website/leifs/delta/applications/CandyBar.java
+        candybar_play=$path/app/src/play/java/website/leifs/delta/applications/CandyBar.java
+        candybar_foss=$path/app/src/foss/java/website/leifs/delta/applications/CandyBar.java
         sed -i "s|setCustomIconsCount\(.*\);|setCustomIconsCount\($amount_all\);|" $candybar_play
         sed -i "s|setCustomIconsCount\(.*\);|setCustomIconsCount\($amount_all\);|" $candybar_foss
 
@@ -320,5 +329,5 @@ jobs:
       uses: stefanzweifel/git-auto-commit-action@v4
       if: inputs.release_type == 'prod'
       with:
-        commit_message: "Post-release cleanup"
+        commit_message: 'Post-release cleanup'
         file_pattern: 'app/src/main/*'
