--- a/.github/workflows/update_requests.yml
+++ b/.github/workflows/update_requests.yml
@@ -16,8 +16,8 @@ jobs:
     - name: Wait if apps are building
       uses: lewagon/wait-on-check-action@v1.2.0
       with:
-        ref: ${{ github.ref }}
-        check-name: 'Build'
+        ref: master
+        check-name: build
         repo-token: ${{ secrets.GITHUB_TOKEN }}
         wait-interval: 10
 
