ignore output-metadata.json

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-*.aab
+*a.aab
 *.aar
 *.ap_
 *.apk
@@ -24,6 +24,7 @@ __pycache__/
 app/.classpath
 app/.project
 app/.settings
+app/release/
 bin/
 build/
 captures/
