--- a/.github/workflows/build_foss.yml
+++ b/.github/workflows/build_foss.yml
@@ -35,6 +35,14 @@ jobs:
         distribution: temurin
         java-version: 17
 
+    - name: Install dependencies
+      run: |
+        sudo pip install -r resources/utilities/requirements.txt
+
+    - name: Add new icons
+      run: |
+        python resources/utilities/add_icons_wrapper.py
+
     - name: Change version
       run: |
         python - << EOF
