--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,18 @@
 #
 # new_icon_2_alt_1: {}
 #
+
+albersons:
+  - com.safeway.client.android.albertsons/com.safeway.mcommerce.android.SplashScreen
+
+caju:
+  - com.caju.employeeApp/com.caju.employeeApp.MainActivity
+
+serasa:
+  - br.com.serasaexperian.consumidor/br.com.serasaexperian.consumidor.ui.view.onboarding.WelcomeActivity
+
+uts:
+  - com.cris.utsmobile/com.cris.ima.utsonmobile.mainmenuitems.SplashActivity
+
+wp_poczta:
+  - pl.wp.wppoczta/pl.wp.pocztao2.ui.activity.login.ActivityLogin
