fix typo in new_icons.yaml

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -9,7 +9,7 @@
 # new_icon_2_alt_1: {}
 #
 
-albersons:
+albertsons:
   - com.safeway.client.android.albertsons/com.safeway.mcommerce.android.SplashScreen
 
 caju:
