--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -23,3 +23,24 @@ uts:
 
 wp_poczta:
   - pl.wp.wppoczta/pl.wp.pocztao2.ui.activity.login.ActivityLogin
+
+c_sharp_shell_net_ide:
+  - com.radinc.csharpshell/crc6435a96f15045e045c.MainActivity
+
+diamond_bus:
+  - bushub.diamondBus/crc64f4438b9300017647.MainActivity
+
+free_reunion_visual_voicemail:
+  - re.free.mobile.android.vvm/fr.freemobile.android.vvm.customui.launchscreens.FirstLaunchActivity
+
+kakao_webtoon:
+  - com.kakaoent.kakaowebtoon/net.daum.android.WebtoonActivity
+
+metamorfosis:
+  - com.metamorfosisrn/com.metamorfosisrn.MainActivity
+
+momup:
+  - net.pluservice.momup/net.pluservice.momup.MainActivity
+
+scruff:
+  - com.appspot.scruffapp/com.appspot.scruffapp.features.splash.views.SplashActivity
