new icon: Bubble

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -44,3 +44,6 @@ momup:
 
 scruff:
   - com.appspot.scruffapp/com.appspot.scruffapp.features.splash.views.SplashActivity
+
+bubble:
+  - org.woheller69.level/org.woheller69.level.Level
