new icon: Tasker AutoInput

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -47,3 +47,6 @@ scruff:
 
 bubble:
   - org.woheller69.level/org.woheller69.level.Level
+
+tasker_autoinput:
+  - com.joaomgcd.autoinput/com.joaomgcd.autoapps.ActivityLaunchApp
