--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -50,3 +50,54 @@ bubble:
 
 tasker_autoinput:
   - com.joaomgcd.autoinput/com.joaomgcd.autoapps.ActivityLaunchApp
+
+air_math:
+  - co.riiid.rb2a.student/co.riiid.rb2a.student.ui.splash.SplashActivity
+
+audio_widget_pack:
+  - com.widgets.music/com.widgets.music.ui.permission.PermissionActivity
+
+desaturate_pro_kwgt:
+  - desaturateprokwgt.kustom.pack/org.kustom.api.dashboard.DashboardActivity
+
+finamp:
+  - com.unicornsonlsd.finamp/com.ryanheise.audioservice.AudioServiceActivity
+
+giropay:
+  - com.gimb.paydirekt.app/com.gimb.paydirekt.app.splash.view.SplashActivity
+
+gloom:
+  - com.materiapps.gloom/com.materiapps.gloom.ui.GloomActivity
+
+luminous_black_poweramp_skin:
+  - com.poweramp.v3.luminousblack/com.poweramp.v3.luminousblack.SkinInfoActivity
+
+medilog:
+  - com.zell_mbc.medilog/com.zell_mbc.medilog.MainActivity
+
+right_dialer:
+  - com.goodwy.dialer/com.goodwy.dialer.activities.SplashActivity.Orange
+
+runday:
+  - com.hanbit.rundayfree/com.hanbit.rundayfree.ui.common.view.activity.a
+
+scuderia_ferrari:
+  - com.ferrari.scuderiaferrari/com.ferrari.scuderiaferrari.MainActivity
+
+super_productivity:
+  - com.superproductivity.superproductivity/com.superproductivity.superproductivity.FullscreenActivity
+
+tawakkalna:
+  - sa.gov.nic.tawakkalna/com.store.android.ui.SplashActivity
+
+volkskrant:
+  - be.persgroep.android.news.mobilevk/nl.persgroep.edition.activities.launcher.LauncherActivity
+
+wawa:
+  - com.wawa.android.appv2/com.wawa.android.appv2.SplashActivity
+
+whisker:
+  - com.whisker.android/com.whisker.android.MainActivity
+
+yuito:
+  - net.accelf.yuito/com.keylesspalace.tusky.SplashActivity
