--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -101,3 +101,18 @@ whisker:
 
 yuito:
   - net.accelf.yuito/com.keylesspalace.tusky.SplashActivity
+
+droidvim:
+  - com.droidvim/jackpal.androidterm.Term
+
+freecbt:
+  - org.erosson.freecbt/host.exp.exponent.MainActivity
+
+gainsfire:
+  - one.mygym.app/one.mygym.app.MainActivity
+
+ourocard:
+  - br.com.bb.oewallet/br.com.bb.oewallet.ui.SplashActivity
+
+pbz_mobile:
+  - hr.asseco.android.intesa.isbd.pbz/hr.asseco.android.intesa.isbd.prelogin.StartActivity
