--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -116,3 +116,9 @@ ourocard:
 
 pbz_mobile:
   - hr.asseco.android.intesa.isbd.pbz/hr.asseco.android.intesa.isbd.prelogin.StartActivity
+
+cam_scanner:
+  - com.cambyte.okenscan/com.intsig.camscanner.launcher.WelcomeDefaultActivity
+
+mrepo:
+  - com.sanmer.mrepo/com.sanmer.mrepo.ui.activity.setup.SetupActivity
