--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -122,3 +122,36 @@ cam_scanner:
 
 mrepo:
   - com.sanmer.mrepo/com.sanmer.mrepo.ui.activity.setup.SetupActivity
+
+assistive_touch_menu:
+  - com.beyondsw.touchmaster/com.beyondsw.ui.TouchActivity
+
+autenticacao_gov:
+  - pt.ama.autenticacaogov/crc64525e08dfc6127ccb.MainActivity
+
+boxfresh:
+  - jp.co.app_cm.boxfresh/jp.co.app_cm.boxfresh.MainActivity
+
+carga_sube:
+  - com.sube.cargasube/com.sube.cargasube.gui.splash.view.SplashActivity
+
+dzienniczek_vulcan:
+  - pl.edu.vulcan.hebe/pl.edu.vulcan.vulcan_flutter.MainActivity
+
+finanzguru:
+  - de.dwins.financeguru/de.dwins.financeguru.SplashActivity
+
+haema_diary:
+  - com.marchlab.haema/com.marchlab.haema.ui.splash.SplashActivity
+
+myindihome:
+  - com.telkom.indihome.external/com.telkom.indihome.external.onboarding.SplashActivity
+
+priority_pass:
+  - com.prioritypass3/com.prioritypass.app.ui.splash.SplashActivity
+
+smarthq:
+  - com.ge.kitchen/com.ge.cafe.SplashActivity
+
+hail:
+  - com.aistra.hail/com.aistra.hail.ui.main.MainActivity
