--- a/.github/workflows/build_foss.yml
+++ b/.github/workflows/build_foss.yml
@@ -114,3 +114,12 @@ jobs:
         path: |
           ${{ env.filename }}-signed.apk
           ${{ env.filename }}-unsigned.apk
+
+    - name: Upload assets in Artifacts
+      uses: actions/upload-artifact@v3
+      if: always()
+      with:
+        name: assets
+        retention-days: 90
+        path: |
+          app/src/main/assets/*
