--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -155,3 +155,18 @@ smarthq:
 
 hail:
   - com.aistra.hail/com.aistra.hail.ui.main.MainActivity
+
+alpi_maps:
+  - akylas.alpi.maps/com.tns.NativeScriptActivity
+
+document_viewer:
+  - org.sufficientlysecure.viewer/org.ebookdroid.ui.library.RequestPermissionsActivity
+
+downwell:
+  - com.devolver.downwell_rerelease/com.devolver.downwell_rerelease.RunnerActivity
+
+escapepod:
+  - org.y20k.escapepod/org.y20k.escapepod.MainActivity
+
+record_you:
+  - com.bnyro.recorder/com.bnyro.recorder.ui.MainActivity
