new icon: RuStore

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -170,3 +170,6 @@ escapepod:
 
 record_you:
   - com.bnyro.recorder/com.bnyro.recorder.ui.MainActivity
+
+rustore:
+  - ru.vk.store/ru.vk.store.app.MainActivity
