new icon: Trakt.tv

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -173,3 +173,6 @@ record_you:
 
 rustore:
   - ru.vk.store/ru.vk.store.app.MainActivity
+
+trakt_tv:
+  - tv.trakt.trakt/tv.trakt.trakt.ui.main.MainActivity
