new icon: PrepLadder

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -176,3 +176,6 @@ rustore:
 
 trakt_tv:
   - tv.trakt.trakt/tv.trakt.trakt.ui.main.MainActivity
+
+prepladder:
+  - com.prepladder.learningapp/com.prepladder.medical.prepladder.SplashActivity
