--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -179,3 +179,6 @@ trakt_tv:
 
 prepladder:
   - com.prepladder.learningapp/com.prepladder.medical.prepladder.SplashActivity
+
+linktree:
+  - ee.linktr.admin/ee.linktr.admin.MainActivity
