new icon: SmartRent

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -182,3 +182,6 @@ prepladder:
 
 linktree:
   - ee.linktr.admin/ee.linktr.admin.MainActivity
+
+smartrent:
+  - com.smartrent.resident/com.smartrent.resident.MainActivity
