new icon: Cataclysm DDA X

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -185,3 +185,6 @@ linktree:
 
 smartrent:
   - com.smartrent.resident/com.smartrent.resident.MainActivity
+
+cataclysm_dda_x:
+  - com.cleverraven.cataclysmdda.experimental/com.cleverraven.cataclysmdda.SplashScreen
