new icon: PGA Tour

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -188,3 +188,6 @@ smartrent:
 
 cataclysm_dda_x:
   - com.cleverraven.cataclysmdda.experimental/com.cleverraven.cataclysmdda.SplashScreen
+
+pga_tour:
+  - com.tour.pgatour/com.pgatour.evolution.SplashActivity
