--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -10,3 +10,75 @@
 #
 
 wawa_alt_1: {}
+
+ai_tales:
+  - com.feynmanapps.aitales/com.feynmanapps.aitales.SplashActivity
+
+apk_installer_by_uptodown:
+  - com.uptodown.installer/com.uptodown.installer.activity.SplashActivity
+
+aula:
+  - com.ublendreact/com.ublendreact.MainActivity
+
+chai:
+  - com.Beauchamp.Messenger.external/com.Beauchamp.Messenger.external.MainActivity
+
+disnat:
+  - com.desjardins.mobile.disnat/com.desjardins.mobile.brokerage.launcher.LauncherActivity
+
+mbta_mticket:
+  - com.mbta.mobileapp/com.mbta.mobileapp.MainActivity
+
+monash_study:
+  - edu.monash.monashmobile/edu.monash.monashmobile.presentation.splash.SplashActivity
+
+onionshare:
+  - org.onionshare.android/org.onionshare.android.ui.MainActivity
+
+track24:
+  - net.track24.android/net.track24.android.SplashActivity
+
+whats_web_for_wa:
+  - com.softinit.iquitos.whatsweb/com.softinit.iquitos.mainapp.ui.Launcher
+
+accurate:
+  - com.cpssoft.mobile.alpha/com.cpssoft.mobile.alpha.SplashActivity
+
+anything_to_pip:
+  - com.vitolaminafra.imagetopip/com.vitolaminafra.imagetopip.MainActivity
+
+appnotifier:
+  - com.farmerbb.appnotifier/com.farmerbb.appnotifier.ui.MainActivity
+
+betterhelp:
+  - com.betterhelp/com.betterhelp.MainActivity
+
+bixpro:
+  - com.triallink.lsmovietree/com.triallink.lsmovietree.SplashScreenActivity
+
+kuku_fm:
+  - com.vlv.aravali/com.vlv.aravali.views.activities.SplashActivity
+
+mein_sovd:
+  - de.sovd.sovdapp/de.sovd.sovdapp.MainActivity
+
+microsoft_whiteboard:
+  - com.microsoft.whiteboard.publicpreview/com.microsoft.whiteboard.activity.WhiteBoardLauncherActivity
+
+minecraft_education:
+  - com.mojang.minecraftedu/com.mojang.minecraftpe.MainActivity
+
+mkaba:
+  - hr.kaba.mbankretail/hr.kaba.mbankretail.MobileBankRetailStub
+
+pocket_operator:
+  - com.teenageengineering.pocketoperatorforpixel/com.unity3d.player.UnityPlayerActivity
+
+spectroid:
+  - org.intoorbit.spectrum/org.intoorbit.spectrum.SpectrumActivity
+
+super_wallet:
+  - mx.com.santander.superwallet/mx.com.santander.superwallet.views.activities.SplashActivity
+
+_11st:
+  - com.elevenst/com.elevenst.intro.Intro
