--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -82,3 +82,90 @@ super_wallet:
 
 _11st:
   - com.elevenst/com.elevenst.intro.Intro
+
+secuso_2048:
+  - org.secuso.privacyfriendly2048/org.secuso.privacyfriendly2048.activities.SplashActivity
+
+secuso_backup:
+  - org.secuso.privacyfriendlybackup/org.secuso.privacyfriendlybackup.ui.main.MainActivity
+
+secuso_boardgame_clock:
+  - org.secuso.privacyfriendlyboardgameclock/org.secuso.privacyfriendlyboardgameclock.activities.SplashActivity
+
+secuso_circuit_training_exercises:
+  - org.secuso.privacyfriendlycircuittraining/org.secuso.privacyfriendlycircuittraining.activities.SplashActivity
+
+secuso_dame:
+  - org.secuso.privacyfriendlydame/org.secuso.privacyfriendlydame.ui.SplashActivity
+
+secuso_dicer:
+  - org.secuso.privacyfriendlydicer/org.secuso.privacyfriendlydicer.ui.SplashActivity
+
+secuso_dice_game:
+  - org.secuso.privacyfriendlyyahtzeedicer/org.secuso.privacyfriendlydicegame.SplashActivity
+
+secuso_finance_manager:
+  - org.secuso.privacyfriendlyfinancemanager/org.secuso.privacyfriendlyfinance.activities.SplashActivity
+
+secuso_food_tracker:
+  - org.secuso.privacyfriendlyfoodtracker/org.secuso.privacyfriendlyfoodtracker.ui.SplashActivity
+
+secuso_interval_timer:
+  - org.secuso.privacyfriendlyintervaltimer/org.secuso.privacyfriendlyintervaltimer.activities.SplashActivity
+
+secuso_ludo:
+  - org.secuso.privacyfriendlyludo/org.secuso.privacyfriendlyludo.activities.SplashActivity
+
+secuso_memo_game:
+  - org.secuso.privacyfriendlymemory/org.secuso.privacyfriendlymemory.ui.SplashActivity
+
+secuso_notes:
+  - org.secuso.privacyfriendlynotes/org.secuso.privacyfriendlynotes.ui.SplashActivity
+
+secuso_pain_diary:
+  - org.secuso.privacyfriendlypaindiary/org.secuso.privacyfriendlypaindiary.activities.SplashActivity
+
+secuso_password_generator:
+  - org.secuso.privacyfriendlypasswordgenerator/org.secuso.privacyfriendlypasswordgenerator.activities.SplashActivity
+
+secuso_pausing_healthily:
+  - org.secuso.privacyfriendlypausinghealthily/org.secuso.privacyfriendlypausinghealthily.activities.SplashActivity
+
+secuso_pedometer:
+  - org.secuso.privacyfriendlyactivitytracker/org.secuso.privacyfriendlyactivitytracker.activities.SplashActivity
+
+secuso_pin_mnemonic:
+  - org.secuso.privacyfriendlypin/org.secuso.privacyfriendlypinmnemonic.SplashActivity
+
+secuso_qr_scanner:
+  - com.secuso.privacyFriendlyCodeScanner/com.secuso.privacyfriendlycodescanner.qrscanner.ui.activities.SplashActivity
+
+secuso_reckoning_skills:
+  - org.secuso.privacyfriendlyrecknoningskills/org.secuso.privacyfriendlyreckoningskills.activities.SplashActivity
+
+secuso_ruler:
+  - org.secuso.privacyfriendlyruler/org.secuso.privacyfriendlyruler.activities.SplashActivity
+
+secuso_shopping_list:
+  - privacyfriendlyshoppinglist.secuso.org.privacyfriendlyshoppinglist/privacyfriendlyshoppinglist.secuso.org.privacyfriendlyshoppinglist.ui.main.SplashActivity
+
+secuso_sketching:
+  - org.secuso.privacyfriendlysketching/org.secuso.privacyfriendlysketching.activities.SplashActivity
+
+secuso_solitaire:
+  - org.secuso.privacyfriendlysolitaire/org.secuso.privacyfriendlysolitaire.Activities.SplashActivity
+
+secuso_sudoku:
+  - org.secuso.privacyfriendlysudoku/org.secuso.privacyfriendlysudoku.ui.SplashActivity
+
+secuso_tape_measure:
+  - org.secuso.privacyfriendlytapemeasure/org.secuso.privacyfriendlycameraruler.SplashActivity
+
+secuso_todo_list:
+  - org.secuso.privacyfriendlytodolist/org.secuso.privacyfriendlytodolist.view.SplashActivity
+
+secuso_torchlight:
+  - com.secuso.torchlight2/com.secuso.torchlight2.ui.SplashActivity
+
+secuso_aktivpause_to_go:
+  - org.secuso.aktivpause/org.secuso.aktivpause.activities.SplashActivity
