--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -169,3 +169,24 @@ secuso_torchlight:
 
 secuso_aktivpause_to_go:
   - org.secuso.aktivpause/org.secuso.aktivpause.activities.SplashActivity
+
+banfield_pet_hospital:
+  - com.banfield.bpht/com.banfield.MainActivity
+
+cooklist:
+  - com.cooklist.android/com.zoontek.rnbootsplash.RNBootSplashActivity
+
+eclub_paraguay:
+  - py.com.eclub.eclubapp/py.com.eclub.eclubapp.MainActivity
+
+homesnap:
+  - com.homesnap/com.homesnap.core.initialization.InitializationActivity
+
+micopiloto:
+  - cl.ionix.enex.mipago/cl.ionix.enex.mipago.platform.ui.splash.SplashActivity
+
+simpan:
+  - com.banyuw.simpan/com.banyuw.simpan.ui.MainActivity
+
+treecard:
+  - org.treecard.app/com.zoontek.rnbootsplash.RNBootSplashActivity
