--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -190,3 +190,12 @@ simpan:
 
 treecard:
   - org.treecard.app/com.zoontek.rnbootsplash.RNBootSplashActivity
+
+firefox:
+  - com.iode.firefox/com.iode.firefox.App
+
+secure_pdf_viewer:
+  - org.grapheneos.pdfviewer/app.grapheneos.pdfviewer.PdfViewer
+
+mcdelivery:
+  - ph.mobext.mcdelivery/ph.mobext.mcdelivery.view.splash.SplashActivity
