--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -199,3 +199,33 @@ secure_pdf_viewer:
 
 mcdelivery:
   - ph.mobext.mcdelivery/ph.mobext.mcdelivery.view.splash.SplashActivity
+
+aplin:
+  - com.nagopy.android.aplin/com.nagopy.android.aplin.ui.main.MainActivity
+
+chu:
+  - com.HyperGames.CHU/com.nifcloud.mbaas.ncmbfcmplugin.UnityPlayerProxyActivity
+
+fantrax_fantasy_sports:
+  - com.fantrax.www.twa/com.fantrax.www.twa.LauncherActivity
+
+insight_physics:
+  - co.loki.edtu/co.classplus.app.ui.common.splash.KSplashActivity
+
+mt_manager:
+  - bin.mt.plus/bin.mt.plus.Main
+
+naver_mail:
+  - com.nhn.android.mail/com.nhn.android.mail.MainSplashActivity
+
+diaguard:
+  - com.faltenreich.diaguard/com.faltenreich.diaguard.feature.navigation.MainActivity
+
+openscale:
+  - com.health.openscale/com.health.openscale.gui.MainActivity
+
+superimage:
+  - com.zhenxiang.superimage/com.zhenxiang.superimage.MainActivity
+
+yetcalc:
+  - yetzio.yetcalc/yetzio.yetcalc.MainActivity
