--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -223,3 +223,6 @@ diaguard:
 
 yetcalc:
   - yetzio.yetcalc/yetzio.yetcalc.MainActivity
+
+permission_manager_x:
+  - com.mirfatif.permissionmanagerx.pro/com.mirfatif.permissionmanagerx.fwk.MainActivityM
