--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -148,7 +148,7 @@ frizzy_kwgt:
 giganima:
   - br.com.giganoapp.giganimapp/com.kimede.giganimaonline.MyActivity
 
-glextor_organizer
+glextor_organizer:
   - com.glextor.appmanager.free/com.glextor.appmanager.gui.ActivityMain
   - com.glextor.appmanager.paid/com.glextor.appmanager.gui.ActivityMain
 
@@ -281,3 +281,5 @@ wow_kwgt:
 you_must_build_a_boat:
   - com.eightyeightgames.ymbab/com.unity3d.player.UnityPlayerActivity
 
+blix:
+  - com.gazetki.gazetki/com.gazetki.gazetki2.activities.SplashActivity
