new icon: MoneyBuster

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -283,3 +283,6 @@ you_must_build_a_boat:
 
 blix:
   - com.gazetki.gazetki/com.gazetki.gazetki2.activities.SplashActivity
+
+moneybuster:
+  - net.eneiluj.moneybuster/net.eneiluj.moneybuster.android.activity.BillsListViewActivity
