new icon: TicketNew

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -286,3 +286,6 @@ blix:
 
 moneybuster:
   - net.eneiluj.moneybuster/net.eneiluj.moneybuster.android.activity.BillsListViewActivity
+
+ticketnew:
+  - ticketnew.android.ui/ticketnew.android.ui.activity.SplashActivity
