new icon: Bitvavo

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -289,3 +289,6 @@ moneybuster:
 
 ticketnew:
   - ticketnew.android.ui/ticketnew.android.ui.activity.SplashActivity
+
+bitvavo:
+  - com.bitvavo.android/com.zoontek.rnbootsplash.RNBootSplashActivity
