new icon: BookBeat

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -292,3 +292,6 @@ ticketnew:
 
 bitvavo:
   - com.bitvavo.android/com.zoontek.rnbootsplash.RNBootSplashActivity
+
+bookbeat:
+  - com.bookbeat.android/com.bookbeat.android.home.HomeTabBarActivity
