new icon: LOCARI

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -295,3 +295,6 @@ bitvavo:
 
 bookbeat:
   - com.bookbeat.android/com.bookbeat.android.home.HomeTabBarActivity
+
+locari:
+  - com.wondershake.locari/com.wondershake.locari.presentation.view.home.HomeActivity
