new icon: Cherrygram

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -298,3 +298,6 @@ bookbeat:
 
 locari:
   - com.wondershake.locari/com.wondershake.locari.presentation.view.home.HomeActivity
+
+cherrygram:
+  - uz.unnarsx.cherrygram/uz.unnarsx.cherrygram.CG_Icon_Cherry
