--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -27,13 +27,15 @@ minecraft_alt_1: {}
 
 minecraft_alt_2: {}
 
-play__station_alt_1: {}
+playstation_alt_1: {}
 
 reddit_alt_4: {}
 
-skype_alt_1: {}
+skype_alt_2: {}
 
 solar_smash_alt_1: {}
+
+spotify_alt_1: {}
 
 xbox_alt_1: {}
 
@@ -99,7 +101,7 @@ bts_island:
 colourtone:
   - com.colourtone.app/com.colourtone.app.MainActivity
 
-crystal:
+crystal_adblock:
   - co.crystalapp.crystal/org.adblockplus.sbrowser.contentblocker.MainPreferences
   - co.crystalapp.crystal/co.crystalapp.crystal.contentblocker.MainPreferences
 
