Adding 7 new icons

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,24 @@
 #
 # new_icon_2_alt_1: {}
 #
+
+starlink:
+    - com.starlink.mobile/com.starlink.mobile.MainActivity
+
+ubank:
+    - au.com.bank86400/au.com.bank86400.MainActivity
+
+fly_bonza:
+    - com.bonzamobile/com.bonzamobile.MainActivity
+
+cmc_invest:
+    - com.cmcmarketsstockbroking.android/com.cmcmarketsstockbroking.android.feature.main.MainActivity
+
+crazyphone:
+    - au.com.crazytel.crazyphone.android/cz.acrobits.softphone.LauncherAlias
+
+binge:
+    - au.com.streamotion.ares/au.com.streamotion.ares.main.MainActivity
+
+cashrewards:
+    - com.cashrewards/com.cashrewards.MainActivity
