--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -29,3 +29,66 @@ binge:
 
 cashrewards:
     - com.cashrewards/com.cashrewards.MainActivity
+
+todoist_amethyst:
+    - com.todoist/com.todoist.alias.HomeActivityAmethyst
+
+todoist_blueberry:
+    - com.todoist/com.todoist.alias.HomeActivityBlueberry
+
+todoist_clover:
+    - com.todoist/com.todoist.alias.HomeActivityClover
+
+todoist_graphite:
+    - com.todoist/com.todoist.alias.HomeActivityGraphite
+
+todoist_lightblueberry:
+    - com.todoist/com.todoist.alias.HomeActivityLightBlueberry
+
+todoist_lightclover:
+    - com.todoist/com.todoist.alias.HomeActivityLightClover
+
+todoist_lightgold:
+    - com.todoist/com.todoist.alias.HomeActivityLightGold
+
+todoist_lightgraphite:
+    - com.todoist/com.todoist.alias.HomeActivityLightGraphite
+
+todoist_lightpink:
+    - com.todoist/com.todoist.alias.HomeActivityLightPink
+
+todoist_lightrainbow:
+    - com.todoist/com.todoist.alias.HomeActivityLightRainbow
+
+todoist_lightred:
+    - com.todoist/com.todoist.alias.HomeActivityLightRed
+
+todoist_lightroyalblue:
+    - com.todoist/com.todoist.alias.HomeActivityLightRoyalBlue
+
+todoist_lightsky:
+    - com.todoist/com.todoist.alias.HomeActivityLightSky
+
+todoist_lighttangerine:
+    - com.todoist/com.todoist.alias.HomeActivityLightTangerine
+
+todoist_neutral:
+    - com.todoist/com.todoist.alias.HomeActivityNeutral
+
+todoist_lightnoir:
+    - com.todoist/com.todoist.alias.HomeActivitylightnoir
+
+todoist_pink:
+    - com.todoist/com.todoist.alias.HomeActivityPink
+
+todoist_royalblue:
+    - com.todoist/com.todoist.alias.HomeActivityRoyalBlue
+
+todoist_sky:
+    - com.todoist/com.todoist.alias.HomeActivitySky
+
+todoist_sunflower:
+    - com.todoist/com.todoist.alias.HomeActivitySunflower
+
+todoist_tangerine:
+    - com.todoist/com.todoist.alias.HomeActivityTangerine
