--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -83,3 +83,33 @@ todoist_sky:
 
 todoist_sunflower:
     - com.todoist/com.todoist.alias.HomeActivitySunflower
+
+clipious:
+  - com.github.lamarios.clipious/com.github.lamarios.clipious.MainActivity
+
+dashlane_authenticator:
+  - com.dashlane.authenticator/com.dashlane.authenticator.MainActivity
+
+ente_auth:
+  - io.ente.auth.independent/io.ente.auth.MainActivity
+
+geomag:
+  - com.sanmer.geomag/com.sanmer.geomag.ui.activity.main.MainActivity
+
+linksheet:
+  - fe.linksheet/fe.linksheet.activity.MainActivity
+
+my_total_by_verizon:
+  - com.tracfone.total.myaccount/com.tracfone.generic.myaccountcommonui.activity.launch.PreLaunchActivity
+
+ning:
+  - de.csicar.ning/de.csicar.ning.MainActivity
+
+trivago:
+  - com.trivago/com.trivago.ft.main.frontend.MainActivity
+
+wx:
+  - joshuatee.wx/joshuatee.wx.StartupActivity
+
+bluelearn:
+  - com.bluelearn/com.bluelearn.MainActivity
