--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -113,3 +113,13 @@ wx:
 
 bluelearn:
   - com.bluelearn/com.bluelearn.MainActivity
+
+translate_you:
+  - com.bnyro.translate.nf/com.bnyro.translate.ui.MainActivity
+  - com.bnyro.translate/com.bnyro.translate.ui.MainActivity
+
+camera:
+  - com.ngcam.camera/com.android.camera.CameraLauncher
+
+compass:
+  - com.motorola.cn.compass/com.motorola.cn.compass.CompassActivity
