remove existing icon, add another

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -102,9 +102,6 @@ linksheet:
 my_total_by_verizon:
   - com.tracfone.total.myaccount/com.tracfone.generic.myaccountcommonui.activity.launch.PreLaunchActivity
 
-ning:
-  - de.csicar.ning/de.csicar.ning.MainActivity
-
 trivago:
   - com.trivago/com.trivago.ft.main.frontend.MainActivity
 
@@ -123,3 +120,6 @@ camera:
 
 compass:
   - com.motorola.cn.compass/com.motorola.cn.compass.CompassActivity
+
+amuse:
+  - io.amuse.android/io.amuse.android.activities.MainActivity
