--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -123,3 +123,31 @@ compass:
 
 amuse:
   - io.amuse.android/io.amuse.android.activities.MainActivity
+
+atomic:
+  - com.jlindemann.science/com.jlindemann.science.activities.SplashActivity
+
+crypto:
+  - com.kokoschka.michael.crypto/com.kokoschka.michael.crypto.ui.views.MainActivity 
+
+disconnect:
+  - com.porg.blocker/com.porg.blocker.MainActivity
+
+disconnect_alt: {}
+
+image_resizer:
+  - ru.tech.imageresizershrinker/ru.tech.imageresizershrinker.main_screen.MainActivity
+
+imprint:
+  - com.polywise.lucid/com.polywise.lucid.ui.screens.onboarding.OnboardingActivity
+
+ireader:
+  - ir.kazemcodes.infinityreader/org.ireader.app.MainActivity
+
+keyoxide:
+  - org.keyoxide.keyoxide/org.keyoxide.keyoxide_flutter.MainActivity
+wormhole:
+  - eu.heili.wormhole/eu.heili.wormhole.MainActivity
+
+xkcdviewer:
+  - de.stoupas.xkcd/de.stoupas.xkcd.MainActivity 
