Added LCL icons

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -347,3 +347,39 @@ zynga_poker:
   - com.zynga.livepoker/com.zynga.livepoker.LivePokerApplication
   - com.zynga.livepoker/com.zynga.pokerlibrary.LivePokerApplication
   - com.zynga.livepoker/com.zynga.ZyngaUnityActivity.ZyngaUnityActivity
+
+lcl_actu_patrimoine:
+  - fr.figaro.leparticulier/fr.figaro.leparticulier.ui.activities.SplashActivity
+
+lcl_assurances:
+  - fr.lcl.pacifica.shootproof/fr.pacifica.shootproof.activity.pub.SplashPubActivity
+
+lcl_bourse:
+  - com.lcl.application.bourse/com.lcl.application.bourse.MainActivity
+
+lcl_essentiel_pro:
+  - com.lcl.pro/app.blank.mobile.MainActivity
+
+lcl_ma_protection_maison:
+  - fr.creditagricole.cats.maprotection.lcl/fr.creditagricole.cats.maprotection.ui.SplashActivity
+ 
+lcl_masante:
+  - lcl.com.application.lclmasante/lcl.com.application.lclmasante.SplashActivity
+
+lcl_mes_comptes:
+  - fr.lcl.android.customerarea/fr.lcl.android.customerarea.activities.notconnected.SplashScreenActivity
+
+lcl_mes_comptes_alt_1: {}
+
+lcl_monem_mobile:
+  - com.mstv.smarttpe.lcl/com.mstv.smarttpe.activities.session.IdentActivity
+
+lcl_paiement_mobile:
+  - fr.lcl.android.payment/com.dejamobile.lclpaiementmobile.ui.activity.LandingActivity
+
+lcl_pro_entreprises:
+  - fr.lcl.android.entreprise/fr.lcl.android.entreprise.ui.activities.AuthenticationActivity
+
+ 
+
+
